--- a/lambda/java_template/pom.xml
+++ b/lambda/java_template/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>lambda_test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>faas_rds</name>
+    <name>java_template</name>
     <dependencies>
         <dependency>
             <groupId>com.amazonaws</groupId>
